plugins {
	id 'org.springframework.boot' version '2.7.5'
	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
	id 'java'
	id "com.github.johnrengelman.processes" version "0.5.0"
	id "org.springdoc.openapi-gradle-plugin" version "1.3.3"
}

group = 'com.aishayusuff'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'org.postgresql:postgresql'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	implementation 'org.springdoc:springdoc-openapi-ui:1.6.12'
	implementation platform('com.amazonaws:aws-java-sdk-bom:1.12.343')
	implementation 'com.amazonaws:aws-java-sdk-s3'

}

tasks.named('test') {
	useJUnitPlatform()
}

openApi {
	apiDocsUrl = "http://localhost:8080/v3/api-docs.yaml"
	outputDir = file("$buildDir/openapi")
	outputFileName = "openapi.yaml"
	waitTimeInSeconds = 40
}



